--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -12,5 +12,48 @@
   "submit": "Registrar",
   "success": "¡Registro completado!",
   "yourCode": "Tu código de acceso",
-  "printLabel": "Imprimir etiqueta"
+  "printLabel": "Imprimir etiqueta",
+
+  
+  "heroTitle": "Expo de Salud Comunitaria de Austin",
+  "heroSubtitle": "Exámenes gratuitos • Puestos comunitarios • Actividades familiares",
+  "regCardTitle": "Registro",
+  "contactInfo": "Información de contacto",
+  "optionalSection": "Preguntas opcionales",
+  "household": "Detalles del hogar",
+  "consents": "Consentimiento y comunicación",
+  "reviewSubmit": "Revisar y enviar",
+  "attendeeCount": "¿Cuántas personas (incluyéndote) asistirán?",
+  "ageBracket": "Tu rango de edad",
+  "age_u18": "Menor de 18",
+  "age_18_34": "18–34",
+  "age_35_49": "35–49",
+  "age_50_64": "50–64",
+  "age_65p": "65+",
+  "accessNeeds": "Necesidades de accesibilidad (opcional)",
+  "screeningInterest": "¿Qué exámenes te interesan? (marca todo lo que aplique)",
+  "screening_bp": "Presión arterial",
+  "screening_bs": "Azúcar en sangre",
+  "screening_bmi": "IMC/Composición corporal",
+  "screening_vision": "Visión",
+  "screening_hearing": "Audición",
+  "screening_dental": "Dental",
+  "screening_other": "Otro (escribe abajo)",
+  "preferredTime": "Franja horaria preferida",
+  "pref_morning": "Mañana (9–11am)",
+  "pref_midday": "Mediodía (11am–1pm)",
+  "pref_afternoon": "Tarde (1–3pm)",
+  "pref_unsure": "Aún no estoy seguro/a",
+  "churchAffil": "Afiliación a iglesia o comunidad (opcional)",
+  "newsletterOpt": "Envíenme información sobre futuros eventos",
+  "photoConsent": "Autorizo fotos no identificables durante el evento",
+  "volunteerInterest": "¿Interesado/a en ser voluntario/a? (opcional)",
+  "dependentsNote": "Si traes niños/invitados, anota lo que debamos saber:",
+  "notes": "¿Algo más que debamos saber?",
+  "otherText": "Otro",
+  "submitRegistration": "Enviar registro",
+  "successThanks": "¡Gracias! Estás registrado/a.",
+  "confirmationHint": "Muestra este QR al registrarte."
 }
+
+
