--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -12,5 +12,46 @@
   "submit": "등록",
   "success": "등록이 완료되었습니다!",
   "yourCode": "체크인 코드",
-  "printLabel": "라벨 인쇄"
+  "printLabel": "라벨 인쇄",
+
+
+  "heroTitle": "오스틴 커뮤니티 건강 엑스포",
+  "heroSubtitle": "무료 검진 • 커뮤니티 부스 • 가족 활동",
+  "regCardTitle": "등록",
+  "contactInfo": "연락처 정보",
+  "optionalSection": "선택 질문",
+  "household": "가구 정보",
+  "consents": "동의 및 안내",
+  "reviewSubmit": "확인 및 제출",
+  "attendeeCount": "본인을 포함해 몇 명이 참석하나요?",
+  "ageBracket": "연령대",
+  "age_u18": "18세 미만",
+  "age_18_34": "18–34세",
+  "age_35_49": "35–49세",
+  "age_50_64": "50–64세",
+  "age_65p": "65세 이상",
+  "accessNeeds": "접근성 필요 사항 (선택)",
+  "screeningInterest": "관심 있는 검진 (해당 사항 모두 선택)",
+  "screening_bp": "혈압",
+  "screening_bs": "혈당",
+  "screening_bmi": "BMI/체성분",
+  "screening_vision": "시력",
+  "screening_hearing": "청력",
+  "screening_dental": "치과",
+  "screening_other": "기타 (아래 입력)",
+  "preferredTime": "선호 도착 시간대",
+  "pref_morning": "오전 (9–11am)",
+  "pref_midday": "정오 (11am–1pm)",
+  "pref_afternoon": "오후 (1–3pm)",
+  "pref_unsure": "아직 모르겠음",
+  "churchAffil": "교회/커뮤니티 소속 (선택)",
+  "newsletterOpt": "향후 커뮤니티 행사 소식 받기",
+  "photoConsent": "행사 중 비식별 사진 촬영에 동의합니다",
+  "volunteerInterest": "자원봉사 관심 (선택)",
+  "dependentsNote": "동반자/어린이 관련 참고 사항:",
+  "notes": "기타 전달 사항",
+  "otherText": "기타",
+  "submitRegistration": "등록 제출",
+  "successThanks": "감사합니다! 등록이 완료되었습니다.",
+  "confirmationHint": "체크인 시 이 QR을 보여주세요."
 }
