--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -53,5 +53,24 @@
   "otherText": "기타",
   "submitRegistration": "등록 제출",
   "successThanks": "감사합니다! 등록이 완료되었습니다.",
-  "confirmationHint": "체크인 시 이 QR을 보여주세요."
-}
+  "confirmationHint": "체크인 시 이 QR을 보여주세요.",
+
+  "optionalSection": "Optional questions",
+  "hearAbout": "How did you hear about the expo?",
+  "ha_churchFriend": "Church/Friend",
+  "ha_newspaper": "Newspaper Ad",
+  "ha_poster": "Poster Ad",
+  "ha_online": "YouTube/Online",
+  "ha_other": "Other",
+  "otherText": "Other (please specify)",
+  "contactMore": "Contact me with more info about these items (Optional)",
+  "ci_fellowship": "Healthy Fellowship",
+  "ci_cooking": "Healthy Cooking",
+  "ci_seminar": "Health Seminar",
+  "ci_outdoor": "Outdoor sports/games",
+  "ci_korean": "Korean class",
+  "ci_bibleStudies": "Bible studies",
+  "ci_prophecy": "Bible prophesy",
+  "ci_signs": "Signs Magazine",
+  "wantPrayer": "I would like prayer (Optional)"
+
