--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -55,22 +55,24 @@
   "successThanks": "감사합니다! 등록이 완료되었습니다.",
   "confirmationHint": "체크인 시 이 QR을 보여주세요.",
 
-  "optionalSection": "Optional questions",
-  "hearAbout": "How did you hear about the expo?",
-  "ha_churchFriend": "Church/Friend",
-  "ha_newspaper": "Newspaper Ad",
-  "ha_poster": "Poster Ad",
-  "ha_online": "YouTube/Online",
-  "ha_other": "Other",
-  "otherText": "Other (please specify)",
-  "contactMore": "Contact me with more info about these items (Optional)",
-  "ci_fellowship": "Healthy Fellowship",
-  "ci_cooking": "Healthy Cooking",
-  "ci_seminar": "Health Seminar",
-  "ci_outdoor": "Outdoor sports/games",
-  "ci_korean": "Korean class",
-  "ci_bibleStudies": "Bible studies",
-  "ci_prophecy": "Bible prophesy",
-  "ci_signs": "Signs Magazine",
-  "wantPrayer": "I would like prayer (Optional)"
+
+  "optionalSection": "선택 질문",
+  "hearAbout": "엑스포를 어떻게 알게 되었나요?",
+  "ha_churchFriend": "교회/친구",
+  "ha_newspaper": "신문 광고",
+  "ha_poster": "포스터 광고",
+  "ha_online": "유튜브/온라인",
+  "ha_other": "기타",
+  "otherText": "기타 (구체적으로 적어주세요)",
+  "contactMore": "다음 항목에 대한 추가 안내를 원합니다 (선택)",
+  "ci_fellowship": "건강한 교제",
+  "ci_cooking": "건강 요리",
+  "ci_seminar": "건강 세미나",
+  "ci_outdoor": "야외 스포츠/게임",
+  "ci_korean": "한국어 수업",
+  "ci_bibleStudies": "성경 공부",
+  "ci_prophecy": "성경 예언",
+  "ci_signs": "사인즈 매거진",
+  "wantPrayer": "기도를 원합니다 (선택)"
+}
 
