--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -55,24 +55,26 @@
   "successThanks": "¡Gracias! Estás registrado/a.",
   "confirmationHint": "Muestra este QR al registrarte.",
 
-  "optionalSection": "Optional questions",
-  "hearAbout": "How did you hear about the expo?",
-  "ha_churchFriend": "Church/Friend",
-  "ha_newspaper": "Newspaper Ad",
-  "ha_poster": "Poster Ad",
-  "ha_online": "YouTube/Online",
-  "ha_other": "Other",
-  "otherText": "Other (please specify)",
-  "contactMore": "Contact me with more info about these items (Optional)",
-  "ci_fellowship": "Healthy Fellowship",
-  "ci_cooking": "Healthy Cooking",
-  "ci_seminar": "Health Seminar",
-  "ci_outdoor": "Outdoor sports/games",
-  "ci_korean": "Korean class",
-  "ci_bibleStudies": "Bible studies",
-  "ci_prophecy": "Bible prophesy",
-  "ci_signs": "Signs Magazine",
-  "wantPrayer": "I would like prayer (Optional)"
+
+  "optionalSection": "Preguntas opcionales",
+  "hearAbout": "¿Cómo te enteraste de la expo?",
+  "ha_churchFriend": "Iglesia/Amigo",
+  "ha_newspaper": "Anuncio en periódico",
+  "ha_poster": "Anuncio en póster",
+  "ha_online": "YouTube/En línea",
+  "ha_other": "Otro",
+  "otherText": "Otro (especifica)",
+  "contactMore": "Contáctenme con más información sobre (Opcional)",
+  "ci_fellowship": "Comunidad saludable",
+  "ci_cooking": "Cocina saludable",
+  "ci_seminar": "Seminario de salud",
+  "ci_outdoor": "Deportes/juegos al aire libre",
+  "ci_korean": "Clase de coreano",
+  "ci_bibleStudies": "Estudios bíblicos",
+  "ci_prophecy": "Profecía bíblica",
+  "ci_signs": "Revista Signs",
+  "wantPrayer": "Quisiera oración (Opcional)"
 }
+
 
 
