--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -73,7 +73,8 @@
   "ci_bibleStudies": "Estudios bíblicos",
   "ci_prophecy": "Profecía bíblica",
   "ci_signs": "Revista Signs",
-  "wantPrayer": "Quisiera oración (Opcional)"
+  "wantPrayer": "Quisiera oración (Opcional)",
+  "prayerDetails": "Petición o detalles de oración (opcional)"
 }
 
 
