--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -79,7 +79,7 @@
   "ci_prophecy": "Bible prophesy",
   "ci_signs": "Signs Magazine",
   "wantPrayer": "I would like prayer (Optional)",
-
+  "registerAnother": "Register another attendee",
   "prayerDetails": "Prayer request or details (optional)"
 
 }
