--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -74,6 +74,7 @@
   "ci_prophecy": "Profecía bíblica",
   "ci_signs": "Revista Signs",
   "wantPrayer": "Quisiera oración (Opcional)",
+  "registerAnother": "Registrar a otra persona",
   "prayerDetails": "Petición o detalles de oración (opcional)"
 }
 
