--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "title": "Austin Community Health Expo Registration",
+  "title": "Texas Community Health Expo Registration",
   "firstName": "First name",
   "lastName": "Last name",
   "email": "Email",
@@ -15,7 +15,7 @@
   "printLabel": "Print Label",
 
 
-  "heroTitle": "Austin Community Health Expo",
+  "heroTitle": "Texas Community Health Expo",
   "heroSubtitle": "Free screenings • Community booths • Family activities",
   "regCardTitle": "Registration",
   "contactInfo": "Contact information",
