--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,5 +1,5 @@
 {
-  "title": "Registro para la Expo de Salud de Austin",
+  "title": "Registro para la Expo de Salud de Texas",
   "firstName": "Nombre",
   "lastName": "Apellido",
   "email": "Correo electrónico",
@@ -15,7 +15,7 @@
   "printLabel": "Imprimir etiqueta",
 
   
-  "heroTitle": "Expo de Salud Comunitaria de Austin",
+  "heroTitle": "Expo de Salud Comunitaria de Texas",
   "heroSubtitle": "Exámenes gratuitos • Puestos comunitarios • Actividades familiares",
   "regCardTitle": "Registro",
   "contactInfo": "Información de contacto",
