--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -1,5 +1,5 @@
 {
-  "title": "오스틴 커뮤니티 건강 엑스포 등록",
+  "title": "텍사스 커뮤니티 건강 엑스포 등록",
   "firstName": "이름",
   "lastName": "성",
   "email": "이메일",
@@ -15,7 +15,7 @@
   "printLabel": "라벨 인쇄",
 
 
-  "heroTitle": "오스틴 커뮤니티 건강 엑스포",
+  "heroTitle": "텍사스 커뮤니티 건강 엑스포",
   "heroSubtitle": "무료 검진 • 커뮤니티 부스 • 가족 활동",
   "regCardTitle": "등록",
   "contactInfo": "연락처 정보",
